--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "facilities",
-  "private": true,
-  "version": "4.5.0",
-  "description": "a Sails application",
-  "keywords": [],
-  "dependencies": {
-    "ejs": "2.3.4",
-    "expect.js": "0.3.1",
-    "grunt": "1.0.1",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-jst": "1.0.0",
-    "grunt-contrib-less": "1.3.0",
-    "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
-    "include-all": "^1.0.0",
-    "rc": "1.0.1",
-    "sails": "~0.12.7",
-    "sails-disk": "~0.10.9",
-    "supertest": "2.0.1",
-    "waterline-sqlite3": "^1.0.3"
-  },
-  "scripts": {
-    "start": "sails lift --models.migrate='safe'",
-    "debug": "node debug app.js",
-    "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
-  },
-  "main": "app.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/lauravsilva/facilities.git"
-  },
-  "author": "lauravsilva",
-  "license": "",
-  "devDependencies": {
+  "name": "facilities"
+  , "private": true
+  , "version": "4.5.0"
+  , "description": "a Sails application"
+  , "keywords": []
+  , "dependencies": {
+    "ejs": "2.3.4"
+    , "expect.js": "0.3.1"
+    , "grunt": "1.0.1"
+    , "grunt-contrib-clean": "1.0.0"
+    , "grunt-contrib-coffee": "1.0.0"
+    , "grunt-contrib-concat": "1.0.1"
+    , "grunt-contrib-copy": "1.0.0"
+    , "grunt-contrib-cssmin": "1.0.1"
+    , "grunt-contrib-jst": "1.0.0"
+    , "grunt-contrib-less": "1.3.0"
+    , "grunt-contrib-uglify": "1.0.1"
+    , "grunt-contrib-watch": "1.0.0"
+    , "grunt-sails-linker": "~0.10.1"
+    , "grunt-sync": "0.5.2"
+    , "include-all": "^1.0.0"
+    , "rc": "1.0.1"
+    , "sails": "~0.12.7"
+    , "sails-disk": "~0.10.9"
+    , "supertest": "2.0.1"
+    , "waterline-sqlite3": "^1.0.3"
+  }
+  , "scripts": {
+    "start": "sails lift --models.migrate='safe'"
+    , "debug": "node debug app.js"
+    , "test": "node ./node_modules/mocha/bin/mocha test/bootstrap.test.js test/integration/**/*.test.js"
+  }
+  , "main": "app.js"
+  , "repository": {
+    "type": "git"
+    , "url": "git://github.com/lauravsilva/facilities.git"
+  }
+  , "author": "lauravsilva"
+  , "license": ""
+  , "devDependencies": {
     "mocha": "^3.1.2"
   }
 }
