--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "jquery": "^3.1.1",
+    "jsdom": "^9.8.3",
     "node-cron": "^1.1.2",
     "rc": "1.0.1",
     "sails": "~0.12.7",
     "sails-disk": "~0.10.9",
     "supertest": "2.0.1",
+    "twitter": "^1.5.0",
     "waterline-sqlite3": "^1.0.3",
     "waterlock": "^0.1.2-rc1",
     "waterlock-google-auth": "^0.1.2-rc1"
