Cron job and Twitter API complete

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.7",
     "sails-disk": "~0.10.9",
+    "sails-hook-cron": "^2.2.0",
     "supertest": "2.0.1",
     "twitter": "^1.5.0",
     "waterline-sqlite3": "^1.0.3",
