--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsdom": "^9.8.3",
     "node-cron": "^1.1.2",
     "rc": "1.0.1",
+    "request": "^2.79.0",
     "sails": "~0.12.7",
     "sails-disk": "~0.10.9",
     "sails-hook-cron": "^2.2.0",
